# retina-blood-vessel-detector-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  RBVD_server.py  compose.yaml  lifespan.py  main.py  pyproject.toml  settings.json  xd.py
app/: main.py
app/controller/: inference_controller.py
app/core/: lifespan.py  logger.py  settings.py
app/exception/: exception_handlers.py  exceptions.py
app/model/: unet_segmentation.py
app/other/: swagger_dark_theme.py
app/repository/: model_repository.py  settings_json_repository.py
app/service/: predict_service.py
app/utils/: singleton.py
controllers/: InferenceController.py  inference_controller.py
core/: lifespan.py  logger.py  settings.py
docker/: Dockerfile  xdd.py
exceptions/: exception_handlers.py  exceptions.py
models/: SegmentationUNET.py  unet_segmentation.py
repositories/: model_repository.py  settings_json_repository.py
services/: predict_service.py
weights/unet_results/: training_scores.pth  training_scores_scheduler_Jaccard_no_crop.pth
