[project]
name = "retina-blood-vessel-detector-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "fastapi-swagger-dark>=0.0.7",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
